<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_name"
            android:textSize="24sp" android:textStyle="bold"/>

        <EditText android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/your_name"
            android:inputType="text"/>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#F9C516"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_many_tv_series_have_you_watched"
            android:textSize="24sp" android:textStyle="bold"/>

        <EditText android:id="@+id/tv_series_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/tv_series_quantity"
            android:inputType="number"/>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#F9C516"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tv_rating"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <CheckBox android:id="@+id/population"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/fargo"
            android:textSize="16sp"/>

        <CheckBox android:id="@+id/area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/outlander"
            android:textSize="16sp"/>

        <CheckBox android:id="@+id/sopranos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/sopranos"
            android:textSize="16sp"/>

        <CheckBox android:id="@+id/got"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/got"
            android:textSize="16sp"/>

        <CheckBox android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/blackmirror"
            android:textSize="16sp"/>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#F9C516"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/what_is_the_genre_of"
            android:textSize="24sp" android:textStyle="bold"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fargo"
            android:textSize="20sp"/>

        <RadioGroup android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fantasy"/>

            <RadioButton android:id="@+id/ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crime"/>

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/romance"/>

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scifi"/>

        </RadioGroup>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#F9C516"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outlander"
            android:textSize="20sp"/>

        <RadioGroup android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fantasy"/>

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crime"/>

            <RadioButton android:id="@+id/ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/romance"/>

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scifi"/>

        </RadioGroup>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#F9C516"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/got"
            android:textSize="20sp"/>

        <RadioGroup android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fantasy"/>

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crime"/>

            <RadioButton android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/romance"/>

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scifi"/>

        </RadioGroup>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#F9C516"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sopranos"
            android:textSize="20sp"/>

        <RadioGroup android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fantasy"/>

            <RadioButton android:id="@+id/ans4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crime"/>

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/romance"/>
            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scifi"/>

        </RadioGroup>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#F9C516"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackmirror"
            android:textSize="20sp"/>

        <RadioGroup android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fantasy"
                android:id="@+id/radioButton2"/>

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crime"/>

            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/romance"/>

            <RadioButton android:id="@+id/ans5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scifi"/>

        </RadioGroup>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#F9C516"/>

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="16dp"
            android:background="#F9C516"
            android:onClick="submitResults"
            android:text="@string/submit"/>
    </LinearLayout>

</ScrollView>


